--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">sopaVariar</string>
+    <string name="emailLabel">Digite seu Email</string>
+    <string name="passwordLabel">Digite sua Senha</string>
+
 </resources>
