--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">sopaVariar</string>
     <string name="emailLabel">Digite seu Email</string>
     <string name="passwordLabel">Digite sua Senha</string>
+    <string name="searchlabel">🔍 Procure sua receita</string>
 
 </resources>
